modules/ext.details.styles/ext.details.styles.less
@import 'mediawiki.skin.variables.less';

// Styles a details block to be visually distinct from its surroundings
.wikicollapse {
	background-color: @background-color-neutral-subtle;
	color: @color-base;
	margin: 1em 0;
	padding: 0.2em 0.4em;
	border: @border-width-base @border-style-base @border-color-base;
	font-size: 87.5%;

	> summary:first-of-type {
		margin: -0.2em -0.4em;
		padding: 0.4em;
		font-weight: @font-weight-semi-bold;
		font-size: 114%;
		cursor: pointer;

		.mw-collapsible-toggle {
			font-weight: @font-weight-normal;
			font-size: 87.5%;
		}
	}
}

.details--root {
	html.client-js:not( .details--not-available ) &:not( .mw-made-collapsible ),
	&.mw-made-collapsible {
		// Remove disclosure arrow when our own toggle button is in place, or if we’re anticipating it
		// to be loaded shortly. If the browser doesn’t support HTMLDetailsElement.toggle(), we’ll
		// add .details--not-available to html, revealing the brower’s disclosure arrow again (if any).
		> summary:first-of-type {
			// Chrome, Firefox
			list-style: none;

			// Safari
			&::-webkit-details-marker {
				display: none;
			}
		}
	}
}

